@@ -32,6 +32,9 @@ Release 2.7.0 - UNRELEASED
 
     HADOOP-11595. Add default implementation for AbstractFileSystem#truncate. (yliu)
 
+    HADOOP-11368. Fix SSLFactory truststore reloader thread leak in
+    KMSClientProvider. (Arun Suresh via wang)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
